--- a/foro.html
+++ b/foro.html
@@ -581,18 +581,18 @@
 
     <header id="main-header" class="standard-header">
         <div class="header-container">
-            <a href="#" class="logo" aria-label="Universo Borderline Homepage">
+            <a href="index.html" class="logo" aria-label="Universo Borderline Homepage">
                 <i class="fas fa-brain site-icon" aria-hidden="true"></i>
                 <h1 class="site-title">UNIVERSO BORDERLINE</h1>
             </a>
             <nav aria-label="Navegación principal">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Cursos</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#" class="active" aria-current="page">Foros</a></li>
-                    <li><a href="#">Memes</a></li>
-                    <li><a href="#">Podcast</a></li>
+                    <li><a href="inicio.html">Inicio</a></li>
+                    <li><a href="cursos.html">Cursos</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="foros.html" class="active" aria-current="page">Foros</a></li>
+                    <li><a href="memes.html">Memes</a></li>
+                    <li><a href="podcast.html">Podcast</a></li>
                 </ul>
             </nav>
         </div>
